<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/titre"
            android:textAlignment="center"
            android:textColor="@color/red_600"
            android:textSize="45sp"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            app:srcCompat="@drawable/pingpongcom" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/rgtype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbsolos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:checked="true"
                    android:text="@string/rbsolos" />

                <RadioButton
                    android:id="@+id/rbduos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rbduos" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/team1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/firstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_style"
                    android:ems="10"
                    android:hint="@string/firstName"
                    android:inputType="textPersonName"
                    android:padding="5dp"
                    android:textColor="@color/blue_900"
                    android:textColorHint="@color/blue_600_50"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/secondName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_style"
                    android:ems="10"
                    android:hint="@string/secondName"
                    android:inputType="textPersonName"
                    android:padding="5dp"
                    android:textColor="@color/blue_900"
                    android:textColorHint="@color/blue_600_50"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/team2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/thirdName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_style"
                    android:ems="10"
                    android:hint="@string/thirdName"
                    android:inputType="textPersonName"
                    android:padding="5dp"
                    android:textColor="@color/blue_900"
                    android:textColorHint="@color/blue_600_50"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/fourthName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_style"
                    android:ems="10"
                    android:hint="@string/fourthName"
                    android:inputType="textPersonName"
                    android:padding="5dp"
                    android:textColor="@color/blue_900"
                    android:textColorHint="@color/blue_600_50"
                    android:textSize="18sp" />

            </LinearLayout>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb3manche"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/rbFirstChoice" />

                <RadioButton
                    android:id="@+id/rb4manche"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rbSecondChoice" />
            </RadioGroup>

            <Button
                android:id="@+id/btnStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:backgroundTint="@color/blue_600_50"
                android:text="@string/play"
                android:textColor="@color/blue_900" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>