<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player1"
                android:translationZ="10dp"
                android:textColor="@color/yellow_600"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_margin="5dp"/>

            <TextView
                  android:id="@+id/add1"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_marginVertical="20dp"
                       android:text="+"
                       android:textAlignment="center"
                       android:textColor="@color/blue_900"
                       android:textSize="100sp"
                       android:textStyle="bold"
                       android:layout_gravity="center"
                       android:layout_marginLeft="130dp"
                       android:translationZ="10dp"/>
            <Spinner
                android:id="@+id/spinnerfirst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+"
                android:textAlignment="center"
                android:textColor="@color/blue_600_50"
                android:textSize="100sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginLeft="130dp"
                android:translationZ="10dp"
                android:padding="60dp"/>

            <TextView
                android:id="@+id/dim1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:text="-"
                android:textAlignment="center"
                android:textColor="@color/blue_900"
                android:textSize="100sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginRight="130dp"
                android:translationZ="10dp"/>
            <Button
                android:id="@+id/btnteam1"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_weight="2"
                android:backgroundTint="@color/blue_600_50"
                android:text="0"
                android:textAlignment="center"
                android:textColor="@color/blue_900"
                android:textSize="100sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

        </FrameLayout>
    <LinearLayout
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:textSize="22sp"
            android:text="@string/score" />
    </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player2"
                android:translationZ="10dp"
                android:textColor="@color/yellow_600"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_margin="5dp"/>

            <TextView
                android:id="@+id/add2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:text="+"
                android:textAlignment="center"
                android:textColor="@color/blue_900"
                android:textSize="100sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginLeft="130dp"
                android:translationZ="10dp"/>
            <Spinner
                android:id="@+id/spinnersecond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/blue_600_50"
                android:textSize="100sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:padding="60dp"
                android:layout_marginLeft="130dp"
                android:translationZ="10dp"/>

            <TextView
                android:id="@+id/dim2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:text="-"
                android:textAlignment="center"
                android:textColor="@color/blue_900"
                android:textSize="100sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginRight="130dp"
                android:translationZ="10dp"/>
            <Button
                android:id="@+id/btnteam2"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_weight="2"
                android:backgroundTint="@color/blue_600_50"
                android:text="0"
                android:textAlignment="center"
                android:textColor="@color/blue_900"
                android:textSize="100sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

        </FrameLayout>

        <!--
            <Button
                android:id="@+id/btnteam2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:backgroundTint="@color/blue_600_50"
                android:text="0"
                android:textAlignment="center"
                android:textColor="@color/blue_900"
                android:textSize="100sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:text="+"
                android:textAlignment="center"
                android:textColor="@color/blue_900"
                android:textSize="100sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:text="-"
                android:textAlignment="center"
                android:textColor="@color/blue_900"
                android:textSize="100sp"
                android:textStyle="bold" />
    -->
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>